# cmake-examples

./: .gitmodules  CMakeLists.txt  README.md  run.sh
src/: calculator.cpp  calculator.h  main.cpp
